# FileTerminalViewer

./: CMakeLists.txt  CONFIG.MD  README.md  TFV_config_template.txt  build.sh
src/: main.cpp
src/app/: App.cpp  App.h
src/config/: Config.cpp  Config.h
src/fs/: FileSystem.cpp  FileSystem.h
src/platform/: Console.h  ConsoleWindows.cpp
src/ui/: CommandLine.cpp  CommandLine.h  LiveSearch.cpp  LiveSearch.h  Renderer.cpp  Renderer.h
